# MLOPS_TEST_PROJECT

./: .gitignore  Makefile  README.md  config_cpu.yaml  data.dvc  pyproject.toml  requirements.txt  trainer.dockerfile
.dvc/: config
.github/workflows/: codecheck.yml  python-app.yml
CNN_Project/: predict_model.py  train_model.py
CNN_Project/data/: make_dataset.py
CNN_Project/models/: model.py
data/processed/: test_image_file.pth  test_target_file.pth  train_image_files.pth  train_target_files.pth
docs/: mkdocs.yaml
docs/source/: index.md
tests/: test_misc.py
wandb/: latest-run
wandb/run-20240105_140826-dcrau3pp/: run-dcrau3pp.wandb
wandb/run-20240105_140826-dcrau3pp/files/: config.yaml
wandb/run-20240105_140952-7iut72lu/: run-7iut72lu.wandb
wandb/run-20240105_140952-7iut72lu/files/: config.yaml
wandb/run-20240105_141058-y60f6v65/: run-y60f6v65.wandb
wandb/run-20240105_141058-y60f6v65/files/: config.yaml  wandb-metadata.json
wandb/run-20240105_141140-rql2wmzh/: run-rql2wmzh.wandb
wandb/run-20240105_141140-rql2wmzh/files/: config.yaml
wandb/run-20240105_141314-cz467vp0/: run-cz467vp0.wandb
wandb/run-20240105_141314-cz467vp0/files/: config.yaml  wandb-metadata.json
wandb/run-20240105_141501-duqdbd1d/: run-duqdbd1d.wandb
wandb/run-20240105_141501-duqdbd1d/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20240105_142344-qbc47gnb/: run-qbc47gnb.wandb
wandb/run-20240105_142344-qbc47gnb/files/: config.yaml  (+2 more)
wandb/run-20240105_142521-ref6kkzv/: run-ref6kkzv.wandb
wandb/run-20240105_142552-ifzuwndz/: run-ifzuwndz.wandb
wandb/run-20240105_142751-3n8smk8t/: run-3n8smk8t.wandb
wandb/run-20240105_152147-uhr7c4mr/: run-uhr7c4mr.wandb
(+12 files in other folders)
